# hatch-jupyter-builder

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE.txt  README.md  RELEASE.md  hatch_build.py  pyproject.toml  readthedocs.yml
.github/: dependabot.yml
.github/workflows/: tests.yml
docs/: conf.py  environment.yml  index.rst
docs/source/background/: index.rst
docs/source/get_started/: config.md  index.rst
docs/source/how_to_guides/: index.rst  migrating_data_files_projects.md  migrating_javascript_projects.md
docs/source/reference/: api_docs.rst  changelog.md  index.rst
docs/source/reference/api/: hatch_jupyter_builder.compare_migrated.rst  hatch_jupyter_builder.migrate.rst  hatch_jupyter_builder.rst  modules.rst
hatch_jupyter_builder/: __about__.py  __init__.py  __main__.py  cli.py  debuglog.py  extension_utils.py  federated_labextensions.py  hooks.py  labextensions.py  plugin.py  utils.py
hatch_jupyter_builder/compare_migrated/: __main__.py  cli.py
hatch_jupyter_builder/migrate/: __main__.py  _migrate.py  cli.py  jupyter_packaging.py
hatch_jupyter_builder/migration/: __main__.py  _migrate.py  compare.py
tests/: __init__.py  conftest.py  test_hooks.py  test_is_stale.py  test_migration.py  test_npm_builder.py  test_plugin.py  test_utils.py
tests/data/: pyproject.toml
tests/data/create_cmdclass/: pyproject.toml
tests/data/create_cmdclass/myproject/: .gitignore  LICENSE.txt  README.md  codecov.yml  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
tests/data/create_cmdclass/myproject/.github/workflows/: build.yml
tests/data/create_cmdclass/myproject/docs/: environment.yml
tests/data/create_cmdclass/myproject/docs/source/: conf.py  installing.rst
tests/data/create_cmdclass/myproject/examples/: introduction.ipynb
tests/data/create_cmdclass/myproject/myproject/: __init__.py  _frontend.py  _version.py  example.py
tests/data/create_cmdclass/myproject/myproject/nbextension/: extension.js
tests/data/create_cmdclass/myproject/myproject/tests/: conftest.py  test_example.py  test_nbextension_path.py
tests/data/create_cmdclass/myproject/src/: index.ts  plugin.ts  version.ts  widget.ts
tests/data/create_cmdclass/myproject/src/__tests__/: index.spec.ts  utils.ts
tests/data/myextension/: .eslintrc.js  .prettierignore  LICENSE  MANIFEST.in  pyproject.toml  setup.py
tests/data/myextension/myextension/: __init__.py
tests/data/myextension/src/: index.ts
tests/data/npm_builder/: pyproject.toml
tests/data/npm_builder/myextension/: .gitignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
tests/data/npm_builder/myextension/.github/workflows/: build.yml  check-release.yml
tests/data/npm_builder/myextension/myextension/: __init__.py  _version.py
tests/data/npm_builder/myextension/schema/: plugin.json
tests/data/npm_builder/myextension/src/: index.ts
tests/data/npm_builder/myextension/style/: index.js
