[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.3.1",
  "jupyterlab==3.*",
]

[project]
name = "myproject"
version = "0.1.0.dev0"
description = "A Custom Jupyter Widget Library"
readme = "README.md"
keywords = [
  "IPython",
  "Jupyter",
  "Widgets",
]
license = { file = "LICENSE.txt" }
authors = [
    { name = "me", email = "me@me.com" },
]
requires-python = ">=3.6"
classifiers = [
  "Framework :: Jupyter",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "ipywidgets>=7.0.0",
]
[project.optional-dependencies]
docs = [
  "jupyter_sphinx",
  "nbsphinx",
  "nbsphinx-link",
  "pypandoc",
  "pytest_check_links",
  "recommonmark",
  "sphinx>=1.5",
  "sphinx_rtd_theme",
]
examples = [
]
test = [
  "nbval",
  "pytest-cov",
  "pytest>=4.6",
]
[project.urls]
Homepage = "https://github.com/myorg/myproject"

[tool.hatch.build]
artifacts = [
    "myproject/nbextension/index.*",
    "myproject/labextension/*.tgz",
    "myproject/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"myproject/nbextension" = "share/jupyter/nbextensions/myproject"
"myproject/labextension" = "share/jupyter/labextensions/myproject"
"./install.json" = "share/jupyter/labextensions/myproject/install.json"
"./myproject.json" = "etc/jupyter/nbconfig/notebook.d/myproject.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "myproject/nbextension/index.js",
    "myproject/labextension/package.json",
]
skip-if-exists = [
    "myproject/nbextension/index.js",
    "myproject/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "myproject/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
