[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling>=1.3.1",
  "jupyterlab~=3.1",
]

[project]
name = "myextension"
version = "0.1.0"
description = "A JupyterLab extension."
readme = "README.md"
keywords = [
  "Jupyter",
  "JupyterLab",
  "JupyterLab3",
]
license = { file = "LICENSE" }
authors = [
    { name = "me", email = "me@me.com" },
]
requires-python = ">=3.7"
classifiers = [
  "Framework :: Jupyter",
  "Framework :: Jupyter :: JupyterLab",
  "Framework :: Jupyter :: JupyterLab :: 3",
  "Framework :: Jupyter :: JupyterLab :: Extensions",
  "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
]
[project.urls]
Homepage = "https://github.com/github_username/myextension"

[tool.hatch.build]
artifacts = [
    "myextension/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"myextension/labextension/static" = "share/jupyter/labextensions/myextension/static"
"install.json" = "share/jupyter/labextensions/myextension/install.json"
"myextension/labextension/package.json" = "share/jupyter/labextensions/myextension/package.json"
"myextension/labextension/schemas/myextension" = "share/jupyter/labextensions/myextension/schemas/myextension"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github"
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "myextension/labextension/static/style.js",
    "myextension/labextension/package.json",
]
skip-if-exists = [
    "myextension/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
source_dir = "src"
build_dir = "myextension/labextension"
npm = [
    "jlpm",
]

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "myextension/_version.py" },
    { src = "package.json", version_template = '"version": "{major}.{minor}.{patch}{channel}{release}"' },
]

[tool.tbump.version]
current = "0.1.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
