[build-system]
build-backend = "jupyter_packaging.build_api"
requires = [
  "jupyter_packaging<2,~=0.10",
  "jupyterlab~=3.1",
]

[tool.jupyter-packaging.options]
skip-if-exists = ["myextension/labextension/static/style.js"]
ensured-targets = ["myextension/labextension/static/style.js", "myextension/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["myextension/labextension/**", "yarn.lock", ".*", "package-lock.json"]
